# pypolycall

./: INSTALLATION.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml
pypolycall/: __init__.py
pypolycall/cli/: __init__.py  main.py  registry.py
pypolycall/config/: __init__.py  manager.py
pypolycall/core/: __init__.py  binding.py
pypolycall/core/protocol/: __init__.py
pypolycall/core/telemetry/: __init__.py
pypolycall/pypolycall/: __init__.py
pypolycall/pypolycall/cli/: __init__.py  main.py  registry.py
pypolycall/pypolycall/cli/commands/: __init__.py  info.py
pypolycall/pypolycall/cli/extensions/: __init__.py
pypolycall/pypolycall/cli/ioc_consumer/: __init__.py
pypolycall/pypolycall/config/: __init__.py  manager.py
pypolycall/pypolycall/core/: __init__.py  binding.py
pypolycall/pypolycall/core/ffi/: __init__.py
pypolycall/pypolycall/core/protocol/: __init__.py
pypolycall/pypolycall/core/state/: __init__.py
pypolycall/pypolycall/core/telemetry/: __init__.py  observer.py
pypolycall/pypolycall/exceptions/: __init__.py
pypolycall/pypolycall/utils/: __init__.py  logger.py  validator.py
pypolycall/tests/: __init__.py  conftest.py
pypolycall/tests/unit/core/: test_binding.py
pypolycall/utils/: __init__.py  logger.py  validator.py
tests/: __init__.py  conftest.py  test_protocol_compliance.py
tests/integration/protocol/: __init__.py  test_binding.py
tests/unit/cli/: __init__.py  test_main.py
tests/unit/config/: __init__.py  test_manager.py
